# vessel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  config.toml
docs/plans/: 2026-02-24-expression-context-normalization-design.md  2026-02-24-expression-context-normalization.md  2026-02-24-expression-context-normalization.md.tasks.json  2026-02-24-logging-system-design.md  2026-02-24-logging-system.md  2026-02-24-logging-system.md.tasks.json  2026-02-24-wasm-module-config-design.md  2026-02-24-wasm-module-config.md  2026-02-24-wasm-module-config.md.tasks.json  2026-02-24-wasm-module-system-design.md  2026-02-24-wasm-module-system.md  2026-02-24-wasm-module-system.md.tasks.json
modules/home-assistant/: Cargo.toml  manifest.json
modules/home-assistant/src/: lib.rs
modules/home-assistant/wit/: vessel-host.wit
src/: api.rs  config.rs  dashboard.rs  main.rs  module.rs  module_manager.rs  modules.rs  protocol.rs  vessel.rs
src/api/: dashboards.rs  modules.rs
src/modules/: discord.rs  media.rs  system.rs
src/modules/discord/: commands.rs  events.rs  ipc.rs  oauth.rs  token_cache.rs  voice.rs
src/modules/media/: commands.rs  events.rs  smtc.rs
src/modules/system/: commands.rs  events.rs  keyboard.rs  window.rs
src/wasm/: capability.rs  host.rs  manifest.rs  mod.rs  module.rs
ui/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/assets/: discord-dashboard.json
ui/src/hooks/: useDashboard.ts
ui/src/lib/: expressions.ts  registry.ts  themes.ts
ui/src/stores/: connection.ts  moduleState.ts  theme.ts
ui/src/types/: dashboard.ts  protocol.ts  (+2 more)
wit/: vessel-host.wit
(+5 files in other folders)
