[package]
name = "vessel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "1.0.228", features = ["derive"] }
enigo = "0.6.1"
anyhow = "1.0.71"
serde_json = "1.0.128"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
dirs = "6"
async-trait = "0.1"
mpsc = "0.2.6"
tokio-tungstenite = "0.28"
futures-util = "0.3.32"
toml = "1.0.1"
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
tower-http = "0.6.8"
wasmtime = { version = "41", features = ["component-model", "async"] }
sha2 = "0.10"
glob = "0.3"

[dependencies.windows]
version = "0.62.2"
features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]
